// Copyright 2026 Yellowbrick Data, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package ai.floedb.floecat.statistics;

option java_multiple_files = true;
option java_package = "ai.floedb.floecat.statistics.rpc";

import "floecat/common/common.proto";

message ListJobsRequest {

}

message ListJobsResponse {

}

message AnalyzeRequest {

}

message AnalyzeResponse {

}

message AnalyzeTableRequest {
  ai.floedb.floecat.common.ResourceId table_id = 1;
  repeated string destination_table_columns = 2;
}

message AnalyzeTableResponse {
  uint64 metadata_tables_scanned = 1;
  uint64 metadata_tables_changed = 2;
  uint64 metadata_errors = 3;
  uint64 stats_tables_scanned = 4;
  uint64 stats_tables_changed = 5;
  uint64 stats_errors = 6;
}

message GetJobRequest {

}

message GetJobResponse {

}

message CancelJobRequest {

}

message CancelJobResponse {

}


// ----- Services -----

service StatsCapture {
  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse);
  rpc Analyze(AnalyzeRequest) returns (AnalyzeResponse);
  rpc AnalyzeTable(AnalyzeTableRequest) returns (AnalyzeTableResponse);
  rpc GetJob(GetJobRequest) returns (GetJobResponse);
  rpc CancelJob(CancelJobRequest) returns (CancelJobResponse);
}
